--- a/ot-pruebatec-front/package.json
+++ b/ot-pruebatec-front/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@material/card": "^7.0.0",
+    "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^9.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
