--- a/ot-pruebatec-front/package.json
+++ b/ot-pruebatec-front/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@material/card": "^7.0.0",
+    "angular2-image-upload": "^1.0.0-rc.2",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^9.3.0",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
